# SafeShipping

./: .gitignore  Architecture Strategy.pdf.docx  Purpose.md  README.md  docker-compose-prod.yml  docker-compose.yml  log-viewer.js  package-lock.json  package.json  search-ledger.js  tenant-dashboard.js
contracts/: MakeFile  README.md  workspace.toml
contracts/safeshipping/: Makefile  job-runner.js  receiver.js  replay.js  tenants.json  test-event-id.js  workspace.toml
contracts/safeshipping/logs/v2u-core/: ledger.ndjson
contracts/test/: test-event-id.mjs
docker/: docker-compose.yml  docker.sh
docker/backend-api/: docker.sh
docker/smart-contracts/: Dockerfile.dev  Dockerfile.prod
docs/: directory_structure.md
docs/Data and Process/: Data_Models.md  Process Model.md  iOT Data Stream models.md
docs/Grant Proposals/: Arbitrum Proposal Draft.docx  Arbitrum_Proposal.md  Chainlink_Proposal.md  CoPilot Chats.md  GitCoin_Proposal.md  submission details.md
docs/MVP Feature Sets/: Feature Breaakdown by Phases.md  Finalized Buildplan for MVP.md  🚢 SafeShipping MVP User Classification (U.S. National Focus).docx
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js
kubernetes/: blockchain-node-configmap.yaml  blockchain-node-pvc.yaml  namespace.yaml
logs/v2u-core/: ledger.ndjson
receiver/: receiver.js
safeshipping_contract/: Cargo.toml  test-event-id.js  test-order.js
safeshipping_contract/src/: lib.rs
scripts/: replay-logs.sh  replay.sh  start-dev.sh  start.sh
temp-restore/: package-lock.json  package.json
